수학 퀴즈 추가

--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -383,6 +383,10 @@ input[type='checkbox']:checked+label {
 }
 
 
+.ko-pick:hover{
+	filter: brightness(85%);
+}
+
 input[type="checkbox"] {
     display: none!important;
 }
