--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -15,13 +15,56 @@
 }
 .hero{
 	background-size: cover;
-	background-image: url(/img/top.png);
+	background-image: url('/img/web/2024Renewal/Frame 1.png');
 	background-repeat: no-repeat;
-	height: 90vh;
 	display: flex;
 	justify-content: center; /* 가로 중앙 정렬 */
 	align-items: center;
 }
+
+.layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 1s forwards;
+    transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+    opacity: 0;
+    z-index: 10;
+  }
+
+  .layer img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+	  transform: translateY(-50px);
+    }
+    to {
+      opacity: 1;
+	  transform: translateY(0px);
+    }
+  }
+
+  /* 각 레이어에 시간차를 둠 */
+  .bg-layer2 {
+    animation-delay: 0s;
+  }
+
+  .bg-layer3 {
+    animation-delay: 1s;
+  }
+
+  .bg-layer4 {
+    animation-delay: 2s;
+  }
 
 .gs{
 	background-size: cover;
