--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -48,7 +48,7 @@ html
 		block CSS
 		block JS
 
-	body(style='min-width: 640px;')
+	body(style="font-family: 'Pretendard', sans-serif!important;")
 		div#Loading= L('LOADING')
 		div#Intro
 			div#intro-top
