--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -80,7 +80,7 @@ block Jungle
 				button.mainbtn#ShopBtn.for-lobby(style='display: none;')!= L('shop')
 				button.mainbtn#DictionaryBtn.for-lobby(style='display: none;')!= L('dict')
 				button.mainbtn#LvEventBtn.for-lobby(style='display: none;')!= L('event')
-				button.mainbtn#DonationBtn.for-lobby(style='display: none;')!= L('payment')
+				//button.mainbtn#DonationBtn.for-lobby(style='display: none;')!= L('payment')
 				// button#WordPlusBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('wordPlus')
 				button.mainbtn#profile-dress.for-lobby(style='display: none;')!= L('dress')
 				button.mainbtn#ReplayBtn.for-lobby(style='display: none;')!= L('replay')
@@ -557,10 +557,15 @@ block Middle
 
 
 			+Product('Shop')
-				div.shop-categories
-					- for(var i in locals.CATEGORIES)
-						- var v = locals.GROUPS[locals.CATEGORIES[i]] || [];
-						div.category-filter.shop-type(id="shop-type-" + locals.CATEGORIES[i], value=v.join(','))!= L('category_' + locals.CATEGORIES[i])
+				div.shop-top
+					div.shop-categories
+						- for(var i in locals.CATEGORIES)
+							- var v = locals.GROUPS[locals.CATEGORIES[i]] || [];
+							div.category-filter.shop-type(id="shop-type-" + locals.CATEGORIES[i], value=v.join(','))!= L('category_' + locals.CATEGORIES[i])
+						//div.category-filter.shop-type(id="shop-type-usermarket")!= " 아이템"
+					div.shop-right
+						a(href="https://cafe.naver.com/pluskkutu/119", target="_blank")
+							button#shop-prob.primaryBtn= "확률형 아이템 정보"
 				div#shop-shelf(style='padding: 0px 20px 20px 20px; box-sizing: border-box; width: 100%; height: 540px; overflow-y: scroll;')
 			
 		
