--- a/neofront/static/css/in_game_kkutu_shop.css
+++ b/neofront/static/css/in_game_kkutu_shop.css
@@ -45,6 +45,25 @@
     transition: all 100ms ease;
 	}
 
+	.shop-top{
+		display: flex;
+		width: 100%;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.shop-right{
+		margin: 25px 20px 25px 0px;
+		display: flex;
+	}
+
+.shop-right a button{
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-right: 5px;
+    border-radius: 8px;
+    border: none;
+    font-size: 20px;
+    padding: 8px;
+}
 /* NIK */
 .x-gm .users-name::before{ content: "[GM]"; color: #2F77D9; text-shadow: 0px 0px 2px #2AF; }
 .chat-item>.x-gm::before{ content: "[GM]"; color: #2F77D9; text-shadow: 0px 0px 2px #2AF; }
