--- a/Server/lib/Web/public/css/in_game_kkutu_shop.css
+++ b/Server/lib/Web/public/css/in_game_kkutu_shop.css
@@ -44,6 +44,16 @@
     color: #6B7280;
     transition: all 100ms ease;
 	}
+	.shop-top{
+		display: flex;
+		width: 100%;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.shop-right{
+		margin: 25px 20px 25px 0px;
+		display: flex;
+	}
 
 	.shop-top{
 		display: flex;
