--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -1611,7 +1611,8 @@ box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.10), 0px 4px 6px -4px rgba(0, 0, 
 			width: 60px;
 			height: 60px;
 		}
-		.dress-equipped{ padding: 0px; border: 2px solid #FFB861; }
+		.dress-equipped{     padding: 1px;
+			border: 1px solid #FFB861; }
 		.dress-expl{ width: 240px; font-size: 11px; }
 			.dress-item-title{ float: left; width: 160px; font-size: 13px; }
 			.dress-item-group{ float: left; padding-top: 1px; width: 80px; color: #BBBBBB; text-align: right; }
