--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -74,16 +74,11 @@ block Jungle
 		div.kkutu-wrap
 			div.kkutu-left
 			div.kkutu-center
-				button.mainbtn#NewRoomBtn.for-lobby(style='display: none;')!= L('newRoomTitle')
-				button.mainbtn#QuickRoomBtn.for-lobby(style='display: none;')!= L('quickRoom')
-				button.mainbtn#ShopBtn.for-lobby(style='display: none;')!= L('shop')
-				button.mainbtn#DictionaryBtn.for-lobby(style='display: none;')!= L('dict')
-				button.mainbtn#LvEventBtn.for-lobby(style='display: none;')!= L('event')
-				//button.mainbtn#DonationBtn.for-lobby(style='display: none;')!= L('payment')
-				// button#WordPlusBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('wordPlus')
-				button.mainbtn#profile-dress.for-lobby(style='display: none;')!= L('dress')
-				button.mainbtn#ReplayBtn.for-lobby(style='display: none;')!= L('replay')
-				button.mainbtn#LeaderboardBtn.for-lobby(style='display: none;')!= L('leaderboard')
+				button#NewRoomBtn.for-lobby(style='display: none; background-color: #8EC0F3;')!= L('newRoom')
+				button#QuickRoomBtn.for-lobby(style='display: none; background-color: #B0D2F3;')!= L('quickRoom')
+				button#ShopBtn.for-lobby(style='display: none; background-color: #B3E7B7;')!= L('shop')
+				button#ReplayBtn.for-lobby(style='display: none; background-color: #D9FF82;')!= L('replay')
+				button#LeaderboardBtn.for-lobby(style='display: none; background-color: #FFADD3;')!= L('leaderboard')
 			div.kkutu-left
 				
 block Top 
@@ -187,25 +182,25 @@ block Middle
 			h4.opt!= L('gameMode')
 			select#room-mode
 				optgroup(label=L('mcKorean'))
-					option(value=3)= L('modeKSH')
-					option(value=2)= L('modeKKT')
-					option(value=8)= L('modeKAP')
-					option(value=10)= L('modeKDA')
-					option(value=5)= L('modeKCW')
-					option(value=12)= L('modeKSS')
-					option(value=4)= L('modeCSQ')
-					option(value=9)= L('modeHUN')
+					option(value=3)!= L('modeKSH')
+					option(value=2)!= L('modeKKT')
+					option(value=8)!= L('modeKAP')
+					option(value=10)!= L('modeKDA')
+					option(value=5)!= L('modeKCW')
+					option(value=12)!= L('modeKSS')
+					option(value=4)!= L('modeCSQ')
+					option(value=9)!= L('modeHUN')
 				optgroup(label="테스트 모드")
-					option(value=14)= L('modeKJH')
-					option(value=15)= L('modeKMQ')
+					option(value=14)!= L('modeKJH')
+					option(value=15)!= L('modeKMQ')
 				optgroup(label="XP 2배 이벤트 중")
-					option(value=6)= L('modeKTY')
+					option(value=6)!= L('modeKTY')
 				optgroup(label=L('mcEnglish'))
-					option(value=1)= L('modeESH')
-					option(value=0)= L('modeEKT')
-					option(value=7)= L('modeETY')
-					option(value=11)= L('modeEDA')
-					option(value=13)= L('modeESS')
+					option(value=1)!= L('modeESH')
+					option(value=0)!= L('modeEKT')
+					option(value=7)!= L('modeETY')
+					option(value=11)!= L('modeEDA')
+					option(value=13)!= L('modeESS')
 		div.dialog-bar(style='margin-top: -5px; height: 50px;')
 			h4
 			h4#game-mode-expl.dialog-bar-value(style='width: 100%; font-size: 11px;')
@@ -301,7 +296,7 @@ block Middle
 				- });
 		div.dialog-bar#dict-output(style='height: 195px; overflow-y: scroll; color: #000; background-color: #fff;')
 		div.dialog-bar.tail-button.d3-bar
-			button#dict-injeong(style="display:none;")= L('injeongReq')
+			button#dict-injeong(style="display:none;")!= L('injeongReq')
 	+Dialog('InviteDiag', 300, 445, L('invite', false))
 		div.invite-board(style='height: 355px; overflow-y: scroll;')
 		div.dialog-bar.tail-button.d3-bar
@@ -325,7 +320,7 @@ block Middle
 	+Dialog('ProfileDiag', 368,518)
 		div.dialog-bar.profile-head
 		div.dialog-bar
-			h4(style='width: 83px;')= L('PRANK')
+			h4(style='width: 83px;')!= L('PRANK')
 			h4#rank
 			h4#rankpoint
 		div.dialog-bar
@@ -400,7 +395,7 @@ block Middle
 					div!= "내 전적을 확인해 보세요"	
 	+Dialog('DressItemDiag', 600, 415, L('dress', false))
 		div.dialog-bar
-			h4(style='width: 150px;')= L('myNickname')
+			h4(style='width: 150px;')!= L('myNickname')
 			input#dress-nickname(type='textfield', placeholder=L('myNicknameX'), style='width: 435px;', maxlength=12)
 		div.dialog-bar
 			h4(style='width: 150px;')!= L('myExordial')
@@ -601,7 +596,7 @@ block Middle
 							div(style="float: left; width: 65%;")
 								span#drawing-title
 						div(style="width: 100%")
-							label(for="drawing-line-width")= L('drawingLineWidth')
+							label(for="drawing-line-width")!= L('drawingLineWidth')
 							input#drawing-line-width(type="range", value="1", min="1", max="40")
 						.palette
 							div
@@ -624,7 +619,7 @@ block Middle
 								button.button-color#color-white
 						div(style="width: 100%")
 							div(style="float: left; width: 60%;")
-								label(for="drawing-color")= L('drawingColor')
+								label(for="drawing-color")!= L('drawingColor')
 								input#drawing-color(type="color", value="#000000")
 							div(style="float: left; width: 40%;")
 								button#drawing-clear= L('drawingClear')
