--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -1,10 +1,37 @@
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
-/* Extrabold */  
+
+@font-face {
+	font-family: 'NanumBarunGothic';
+	font-style: normal;
+	font-weight: 400;
+	src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot');
+	src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix') format('embedded-opentype'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff') format('woff'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf') format('truetype');
+   }
 
 :root {
-	--font-body: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	--font-body: 'NanumBarunGothic', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-family: var(--font-body);
+}
+
+/* 배경 */
+#Background{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	z-index: -1;
+  background-image: url(/img/kkutu/gamebg.png);
+  background-size: 200px 200px;
+}
+
+#Background{
+	animation: BGScroll 4s linear infinite;
+}
+@keyframes BGScroll{
+	from{ background-position: 0px 0px; }
+	to{ background-position: -200px -200px; }
 }
 
 .font-bold{
