--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -198,6 +198,7 @@ block Middle
 				optgroup(label="테스트 모드")
 					option(value=14)= L('modeKJH')
 					option(value=15)= L('modeKMQ')
+					option(value=16)= L('modeKMU')
 				optgroup(label="XP 2배 이벤트 중")
 					option(value=6)= L('modeKTY')
 				optgroup(label=L('mcEnglish'))
