--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -493,8 +493,8 @@ block Middle
 			strong DIRECTOR
 			p 유한선
 
-			strong DEVELOPENT LEADER
-			p 이도울 (이규빈)
+			strong DEVELOPMENT LEADER
+			p 이규빈
 
 			strong CLOSED BETA TEST
 			p Sqlare
@@ -510,6 +510,7 @@ block Middle
 
 			strong SPECIAL THANKS TO
 			p JJoriping (Original KKuTu)
+			p KKuTu.IO (KKuTu-Game)
 
 	+Dialog('TeamSelectDiag', 500, 85, "팀 설정")
 		div.team-selector
