3초전 5초전 10초전 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -216,6 +216,8 @@ block Middle
 		div.dialog-bar
 			h4.opt!= L('roundTime')
 			select#room-time
+				option(value=3, style='color: #00FF00')
+				option(value=5, style='color: #50BCDF')
 				option(value=10, style='color: #FF4444')
 				option(value=30)
 				option(value=60, selected)
