--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -18,12 +18,12 @@
 
  
  @media (prefers-color-scheme: dark) {
-	#Intro{
+	/*#Intro{
 		background: #2f2f2f!important;
 	}
 	#intro-text {
 		color: white!important;
-	}
+	}*/
 	#Top {
 		background-color: #1f2937!important;
 	}
@@ -207,6 +207,11 @@ equ{
     position: fixed;
     z-index: 4;
     width: 100vw;
+	background-image: url(/img/kkutu/splash.png);
+	box-shadow: inset 0 0 5em 1em #000;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 	#version{
 		position: absolute;
@@ -218,9 +223,9 @@ equ{
 	#intro-text{
 		margin-top: 20px;
 		font-weight: 600;
-		color: black;
+		color: white;
 		font-size: 40px;
-		text-align: right;
+		text-align: center;
 	}
 	#intro-top{
 		display: flex;
@@ -232,7 +237,7 @@ equ{
     width: 100%;
     flex-direction: column;
     display: flex;
-    align-items: end;
+    align-items: center;
 	}
 #Loading{
 	position: fixed;
