글로벌 공지 개선

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -89,7 +89,11 @@ block Jungle
 block Top 
 	div#Top
 		+Menu()
-
+		div#global-notice
+			div#gn-content
+				include ../public/global_notice.html
+		+Expl(L('GLOBAL_NOTICE'))
+		
 block Middle
 	- var VERSION = L('version');
 	- var nick = SESSION.profile ? (SESSION.nickname || SESSION.profile.title || SESSION.profile.name) : null;
