--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -207,6 +207,7 @@ equ{
     position: fixed;
     z-index: 4;
     width: 100vw;
+	background: #2f2f2f!important;
 	background-image: url(/img/kkutu/splash.png);
 	box-shadow: inset 0 0 5em 1em #000;
     background-position: center;
