--- a/neofront/static/css/style.css
+++ b/neofront/static/css/style.css
@@ -247,12 +247,11 @@ span{
 }
 
 #global-notice{
-	margin-top: 30px;
+	margin-top: 60px;
 	color: white;
 	text-align: center;
 	cursor: pointer;
 	z-index: 5;
-	animation: scroller 75s linear infinite;
 }
 
 #gn-content{
@@ -261,9 +260,11 @@ span{
 	right: 0;
 	background: rgb(0,0,0);
 	background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
-	padding: 3px 0px;
+	font-size: 20px;
+    padding: 10px;
+    font-weight: 500;
 	z-index: -1;
-	width: max-content;
+	width: 100%;
 }
 .searching{
 	color: #EEEEEE;
