--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -52,8 +52,8 @@ html
 		div#Loading= L('LOADING')
 		div#Intro
 			div#intro-top
-				//img(style="width: 200px", class="light", src="/img/kkutu/intro/infole_logo.svg")
-				//img(style="width: 200px", class="dark", src="/img/kkutu/intro/infole_logo_dark.svg")
+				img(style="width: 200px", class="light", src="/img/kkutu/intro/moremme_light.svg")
+				img(style="width: 200px", class="dark", src="/img/kkutu/intro/moremme_dark.svg")
 				img(style="height: 120px;", src="/img/kkutu/intro/grac_all.svg")
 			div#intro-rc
 				img(style="height: 108px", class="light", src="/img/kkutu/intro/kkutu_logo_dark.svg")
