--- a/Server/lib/Web/views/login.pug
+++ b/Server/lib/Web/views/login.pug
@@ -30,7 +30,7 @@ html
 		span#locale= JSON.stringify(LANG)
 		//볕뉘 수정 구문삭제(30)
 		div.login-with(style="max-width: 7rem; margin-left: auto; margin-right: auto; display: flex; align-items: center;")
-			//img(style="height: 2rem; width: auto;" src="/img/kkutu/intro/infole_logo.svg" alt="Logo")
+			img(style="height: 2rem; width: auto;" src="/img/kkutu/intro/moremme_light.svg" alt="Logo")
 
 		div.login-with= locals.text ? L(locals.text) : L('loginWith')
 		//볕뉘 수정
