--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -495,7 +495,7 @@ block Middle
 
 	+Dialog('CreditDiag', 390, 580, "만든 사람들")
 		div(style="font-size: 16px; text-align: center;")
-			p(style="font-size: 32px;font-weight: 700;margin-top: -2px;margin-bottom: -5px;") Plus KKuTu Team
+			p(style="font-size: 32px;font-weight: 700;margin-top: -2px;margin-bottom: -5px;") Morem.ME Team
 			strong DIRECTOR
 			p 유한선
 
@@ -563,8 +563,8 @@ block Middle
 						h3 환불 정책
 
 				div.sideFooter
-					//img(src="/img/kkutu/infole_gray.svg")
-					p Copyright &copy; 2021~ Plus KKuTu
+					//img(src="/img/kkutu/moremme_gray.svg")
+					p Copyright &copy; 2021~ Morem.ME
 			
 	div(style="width: 100%;display: flex;height: 680px;")
 		div.lowreshidden(style="width:160px;height:600px;/*background-image: url(/img/ad/placeholder-l.png);*/")
