로그인 버그 수정 및 라이선스 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -455,7 +455,7 @@ block Middle
 		iframe#coupon-board(width=400, height=180)
 	+Dialog('Community2Diag', 1280, 750, "공식 커뮤니티")
 		iframe#community2(width=1280, height=700)
-	+Dialog('NewbieDiag', 390, 230, "시작하기")
+	+Dialog('NewbieDiag', 390, 230, "시작하기", true)
 		div(style="font-size: 16px; text-align: center;")
 			p
 				| 처음 만나는 것 같네요? 먼저
